--- a/.gitconfig
+++ b/.gitconfig
@@ -6,6 +6,6 @@
 	chekcout = checkout
 	ch = checkout
 	stash-checkout = "!git stash -q && ( git checkout \"$@\" && git pull; git stash pop -q  ) #"
-	stash-c = stash-chekcout
+	stash-c = stash-checkout
 	checout = checkout
 	amend = commit --amend
