📝  added todo for nerd fonts as a submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,8 @@
 	path = dotbot
 	url = https://github.com/anishathalye/dotbot
 	ignore = dirty
+# [submodule "nerd-fonts"]
+# 	path = nerd-fonts
+# 	url = https://github.com/ryanoasis/nerd-fonts
+# 	ignore = dirty
+# 	shallow = true
