✨️: added kitty config file

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -11,3 +11,7 @@
       relink: true
       if: [ $(uname -s) != 'Linux' ]
       path: Aliases
+- link:
+    ~/.config/kitty:
+      relink: true
+      path: kitty
