✨️: added tmux config file

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -15,3 +15,7 @@
     ~/.config/kitty:
       relink: true
       path: kitty
+- link:
+    ~/.tmux.conf:
+      relink: true
+      path: tmux/.tmux.conf
