--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -4,7 +4,8 @@ bold_font Iosevka NFM Bold
 italic_font Iosevka NFM Italic
 bold_italic_font Iosevk NFM Bold Italic
 
-map ctrl+v paste_from_clipboard
+map ctrl+shift+v paste_from_clipboard
+map ctrl+shift+c copy_to_clipboard
 
 font_size 12.5
 adjust_line_height 150%
