--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -12,3 +12,7 @@
 	history = "!git log --pretty=format:\"[%h] %ae, %ar: %s\" --stat"
 [core]
 	editor = nvim
+[diff]
+	tool = vimdiff
+[merge]
+	tool = vimdiff
