--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -6,7 +6,7 @@
 	chekcout = checkout
 	ch = checkout
 	stash-checkout = "!git stash -q && ( git checkout \"$@\" && git pull; git stash pop -q  ) #"
-	stash-c = stash-checkout
+	sch = stash-checkout
 	checout = checkout
 	amend = commit --amend
 	history = "!git log --pretty=format:\"[%h] %ae, %ar: %s\" --stat"
