👨‍💻: made that the status for git is summarized

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -16,9 +16,9 @@
 	m = merge
 	latest = "!git tag latest -f && git push --tag -f"
 	dotfiles = "!dotfilesRanFromWorkingDirectory=$(pwd) && cd ~/.dotfiles && (git $@; cd $dotfilesRanFromWorkingDirectory) #"
-	a = "!if [ \"$#\" -eq 0 ]; then git add .; else git add $@; fi; git status #"
+	a = "!if [ \"$#\" -eq 0 ]; then git add .; else git add $@; fi; git status -s #"
 	p = push
-	s = status
+	s = "! git status -s"
 	pl = "!git stash; (git fetch && git pull); git stash pop"
 	rem = remote
 	cmmt = commit
