--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -24,6 +24,7 @@ set -g mouse on
 # address vim mode switching delay (http://superuser.com/a/252717/65504)
 set -s escape-time 0
 
+set-option -g focus-events on
 #--------------------------------------------------------------------------
 # Status line
 #--------------------------------------------------------------------------
