👨‍💻 made that zoom is retained when swiching panes

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -52,10 +52,10 @@ set-option -g default-shell /bin/zsh
 set -g prefix C-Space
 
 # Move around panes like in vim
-bind -r h select-pane -L
-bind -r j select-pane -D
-bind -r k select-pane -U
-bind -r l select-pane -R
+bind -r h select-pane -L -Z
+bind -r j select-pane -D -Z
+bind -r k select-pane -U -Z
+bind -r l select-pane -R -Z
 bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
 
