✨ made that xdebug is installed for php

--- a/apt.conf.yaml
+++ b/apt.conf.yaml
@@ -1,3 +1,4 @@
+# use with the following command `sudo ./install -c apt.conf.yaml -p dotbot-aptget/aptget.py` 
 # build requirements for nvim
 - aptget: [ git, ninja-build, gettext, cmake, unzip, curl, build-essential ]
 - shell:
@@ -20,5 +21,5 @@
 # PHP first add ppa then all the different versions and plugins
 - aptget: 
     php8.2: ppa:ondrej/php
-- aptget: [ php8.2-zip, php8.2-curl, php8.2-gd, php8.2-xml, php8.2-sqlite3, php8.2-mysql, php8.2-mbstring ]
-- aptget: [ php7.4, php7.4-zip, php7.4-curl, php7.4-gd, php7.4-xml, php7.4-sqlite3, php7.4-mysql, php7.4-mbstring ]
+- aptget: [ php8.2-zip, php8.2-curl, php8.2-gd, php8.2-xml, php8.2-sqlite3, php8.2-mysql, php8.2-mbstring, php8.2-xdebug ]
+- aptget: [ php7.4, php7.4-zip, php7.4-curl, php7.4-gd, php7.4-xml, php7.4-sqlite3, php7.4-mysql, php7.4-mbstring, php7.4-xdebug ]
