👨DebitOrderHistory‍💻 added aliases

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -32,6 +32,7 @@
 	f = fetch
 	cl-b = "!git branch | grep -v $(git rev-parse --abbrev-ref HEAD) | xargs git branch -D"
 	ups = "!git push -u origin $(git rev-parse --abbrev-ref HEAD)"
+	rest = restore
 [core]
 	editor = nvim
 [diff]
