--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -35,6 +35,7 @@
 	cl-b = "!git branch | grep -v $(git rev-parse --abbrev-ref HEAD) | xargs git branch -D"
 	ups = "!git push -u origin $(git rev-parse --abbrev-ref HEAD)"
 	rest = restore
+	srest = "!if [ \"$#\" -eq 0 ]; then git restore . --staged; else git restore $@ --staged; fi; git status -s #"
 [core]
 	editor = nvim
 [diff]
