--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -36,6 +36,7 @@
 	ups = "!git push -u origin $(git rev-parse --abbrev-ref HEAD)"
 	rest = restore
 	srest = "!if [ \"$#\" -eq 0 ]; then git restore . --staged; else git restore $@ --staged; fi; git status -s #"
+	tagls = "!git for-each-ref --sort=creatordate --format '%(refname) %(creatordate)' refs/tags | sed 's/^refs\\/tags\\///'"
 [core]
 	editor = nvim
 [diff]
