--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -37,6 +37,7 @@
 	rest = restore
 	srest = "!if [ \"$#\" -eq 0 ]; then git restore . --staged; else git restore $@ --staged; fi; git status -s #"
 	tagls = "!git for-each-ref --sort=creatordate --format '%(refname) %(creatordate)' refs/tags | sed 's/^refs\\/tags\\///'"
+	rb = rebase
 [core]
 	editor = nvim
 [diff]
