✨ made that the cloned neovim repo is deleted after building from source

--- a/apt.conf.yaml
+++ b/apt.conf.yaml
@@ -11,7 +11,9 @@
                 && make CMAKE_BUILD_TYPE=RelWithDebInfo
                 && cd build
                 && cpack -G DEB
-                && sudo dpkg -i nvim-linux64.deb ;
+                && sudo dpkg -i nvim-linux64.deb 
+                && cd ../..
+                && rm -rf neovim;
             fi"
         stdout: true
         description: "Build neovim from source if it is not allready installed."
