🪟🔧 updated the powershell config to so that all aliases are working and that it is also applied to powershell 7

--- a/install-windows.conf.yml
+++ b/install-windows.conf.yml
@@ -11,6 +11,10 @@
       relink: true
       path: powershell/powershell_profile.ps1
 - link:
+    '~/Documents/PowerShell/Microsoft.PowerShell_profile.ps1':
+      relink: true
+      path: powershell/powershell_profile.ps1
+- link:
     ~/AppData/Local/nvim:
       relink: true
       path: nvim
