🔐 made that the git hub no replay email is used instead of my old work email (spam that shit💩 see if I care)

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,5 +1,5 @@
 [user]
-	email = pieter.vandermeijden@lavalamp.biz
+	email = 21083972+Pietietjie@users.noreply.github.com
 	name = Pieter
 [alias]
 	alias = "!git config --global alias.$1 \"$2\" #"
