--- a/install-ubuntu.conf.yaml
+++ b/install-ubuntu.conf.yaml
@@ -13,29 +13,12 @@
                 && cpack -G DEB
                 && sudo dpkg -i nvim-linux64.deb 
                 && cd ../..
-                && rm -rf neovim;
+                && rm -rf neovim
+                && nvim --headless \"+Lazy! sync\" +qa;
             fi"
         stdout: true
         description: "Build neovim from source if it is not allready installed."
         stderr: true
-    -
-        command:
-            'sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"'
-        stdout: true
-        description: "Install oh my zsh"
-        stderr: true
-    -
-        command:
-            "mkdir -p ~/.local/share/nvim/databases && touch ~/.local/share/nvim/databases/telescope_history.sqlite3"
-        stdout: true
-        description: "Create sqlite db for nvim"
-        stderr: true
-    -
-        command:
-            'curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.40.1/install.sh | bash'
-        stdout: true
-        stderr: true
-        description: "Install node version manager and node"
 
 - aptget: [ tmux, fzf, grep, ripgrep, mysql-server, mysql-client, sqlite3, jq ]
 # PHP first add ppa then all the different versions and plugins
