--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -28,6 +28,32 @@
         relink: true
         path: nvim
         create: true
+- shell:
+    - 
+        command:
+            "if $(command -v omz);
+            then
+                sh -c \"$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)\";
+            fi"
+        stdout: true
+        description: "Install oh my zsh: "
+        stderr: true
+    -
+        command:
+            "mkdir -p ~/.local/share/nvim/databases && touch ~/.local/share/nvim/databases/telescope_history.sqlite3"
+        stdout: true
+        description: "Create sqlite db for nvim"
+        stderr: true
+    -
+        command:
+            "if $(command -v nvm);
+            then
+                curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.40.1/install.sh | bash
+                && nvm install v20.18.0;
+            fi"
+        stdout: true
+        stderr: true
+        description: "Install node version manager and node: "
 - link:
     ~/.oh-my-zsh/themes/pietietjie.zsh-theme:
         relink: true
