✨ added `scrp` (pronounced skrrrrp) command that fzf over precreated scripts as a utility ✨🧑‍💻 added start tm script that creates the .dotfiles session and others that can be defined by a json file 🔥 removed the wezterm symlink and the previous tm start script

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,9 +1,4 @@
 - link:
-    ~/.wezterm.lua:
-        relink: true
-        path: wezterm/.wezterm.lua
-        create: true
-- link:
     ~/.bashrc:
         force: true
         relink: true
@@ -23,6 +18,11 @@
     ~/.config/nvim:
         relink: true
         path: nvim
+        create: true
+- link:
+    ~/scripts:
+        relink: true
+        path: scripts
         create: true
 - shell:
     - 
