--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "dotbot-aptget"]
 	path = dotbot-aptget
 	url = https://github.com/alegsan/dotbot-aptget.git
+[submodule "dotbot-omnipkg"]
+	path = dotbot-omnipkg
+	url = https://github.com/code-maniac/dotbot-omnipkg
