🔧 made that alacritty is linked

--- a/install-windows.conf.yml
+++ b/install-windows.conf.yml
@@ -1,4 +1,9 @@
 - link:
+    ~/AppData/Roaming/alacritty:
+        relink: true
+        path: alacritty
+        create: true
+- link:
     ~/.wezterm.lua:
         relink: true
         path: wezterm/.wezterm.lua
