--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = dotbot
 	url = https://github.com/anishathalye/dotbot
 	ignore = dirty
+[submodule ".dotfiles_private"]
+	path = .dotfiles_private
+	url = git@github.com:Pietietjie/.dotfiles_private.git
