🔧 made that the alacritty is part of the install config

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,4 +1,9 @@
 - link:
+    ~/alacritty:
+        relink: true
+        path: alacritty
+        create: true
+- link:
     ~/.bashrc:
         force: true
         relink: true
