🔧 added init Mozilla config to the dotfiles

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,4 +1,9 @@
 - link:
+    ~/.mozilla:
+        relink: true
+        path: mozilla
+        create: true
+- link:
     ~/.config/alacritty:
         relink: true
         path: alacritty
