🐛 fixed the config link for the awesome config

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -46,8 +46,8 @@
         path: zsh/.zshrc
         create: true
 - link:
-    ~/.config/awesome/rc:
+    ~/.config/awesome:
         force: true
         relink: true
-        path: awesome/rc.lua
+        path: awesome
         create: true
