🥅 made that the symlinks that should only be set up by the root user is skipped for all other users

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -55,11 +55,13 @@
     /usr/share/libalpm/hooks:
         force: true
         relink: true
+        if: "[[ \"$EUID\" -eq 0 ]]"
         path: pacman/hooks
         create: true
 - link:
     /etc/pkglist.txt:
         force: true
         relink: true
+        if: "[[ \"$EUID\" -eq 0 ]]"
         path: pacman/pkglist.txt
         create: true
